IaaC-CFN/pgadmin_infra.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: 'Create complete pgAdmin4 infrastructure'
Metadata:
  Author: FilipKamenar

Parameters:
  InstanceName:
    Type: String
    Description: Name of EC2 instance.
    Default: legato-pgadmin4-web-server
  InstanceType:
    Type: String
    Description: Type of EC2 instance.
    Default: t3a.small
  InstanceImageId:
    Type: 'AWS::EC2::Image::Id'
    Description: AMI ID of the Ubuntu image.
    Default: 'ami-065deacbcaac64cf2'
  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup::Id
    Description: Existing Security group ID of PostgreSQL RDS instance.
    Default: 'sg-006fd74e2ab3f26f8'
  IngressIpAddress:
    Type: String
    Description: CIDR of the IP address to allow access to the pgAdmin4 EC2 instance.
    Default: '0.0.0.0/0'

Resources:
  EC2DBKeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: EC2DBKeyPair

  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${InstanceName}-sg
      GroupDescription: EC2 pgAdmin instance SG
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref IngressIpAddress
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref IngressIpAddress
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
          Description: Allow HTTP outbound traffic
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
          Description: Allow HTTPS outbound traffic
        - IpProtocol: '-1'
          DestinationSecurityGroupId: !Ref RdsSecurityGroup
          Description: Allow all outbound traffic to RDS

  RdsPostgreInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref Ec2SecurityGroup
      GroupId: !Ref RdsSecurityGroup
      Description: Allow all inbound traffic from Ec2SG to RdsPostgreSG

  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref InstanceImageId
      KeyName: !Ref EC2DBKeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref Ec2SecurityGroup
          SubnetId: !ImportValue PublicSubnetOne
      Tags:
        - Key: "Name"
          Value: !Ref InstanceName
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash
          sudo sh -c 'echo "deb https://ftp.postgresql.org/pub/pgadmin/pgadmin4/apt/$(lsb_release -cs) pgadmin4 main" > /etc/apt/sources.list.d/pgadmin4.list'
          sudo curl https://www.pgadmin.org/static/packages_pgadmin_org.pub | sudo apt-key add
          sudo apt update && sudo apt upgrade -y
          sudo apt install pgadmin4-web -y
Outputs:
  Ec2InstanceId:
    Description: ID of the pgAdmin Ec2 instance
    Value: !Ref Ec2Instance
  Ec2InstancePublicIp:
    Description: Public IP of the pgAdmin Ec2 instance
    Value: !GetAtt Ec2Instance.PublicIp
